--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -72,7 +72,7 @@
     </script>
 {% endif %}
 {% block navbar %}
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
@@ -82,7 +82,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand white-text" href="/">{{ h_app_name }}</a>
+                <a class="navbar-brand white-text" style="margin: 0; padding: 0;" href="/">
+                    <img style="margin: 5px; padding: 0;" src="{% static 'img/logo_white.png' %}" alt="{{ h_app_name }}" height="40" width="114">
+                </a>
 
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
