--- a/app/templates/base_email.html
+++ b/app/templates/base_email.html
@@ -136,8 +136,8 @@
 
         .button-td:hover,
         .button-a:hover {
-            background: #32d88e !important;
-            border-color: #32d88e !important;
+            background: #0f76cd !important;
+            border-color: #0f76cd !important;
         }
 
         /* Media Queries */
@@ -242,6 +242,19 @@
                         <img role="social-icon" alt="Twitter" title="Twitter" border="0" height="20" width="20"
                              style="height: 20px; width: 20px; border:none; font-family: Helvetica, arial, sans-serif;"
                              src="https://marketing-image-production.s3.amazonaws.com/uploads/96a584ffd3b9a8f9f849b1de919e43e38b8520e663f256b61eb558a7a63a801142aa287f22fc5f518c412f188afc98938a1fa93432794ff9caaf3980fac849ad.png"/></a>
+
+                    <a role="social-icon-link" href="http://www.instagram.com/hackcu" target="_blank" border="0"
+                       alt="Instagram" title="Instagram"
+                       style="border-radius: 5px; -webkit-border-radius:5px; -moz-border-radius:5px; -ms-border-radius:5px; -o-border-radius:5px; color: white; display: inline-block; outline: none; text-decoration:none; border: none; font-family: Helvetica, arial, sans-serif;  padding-left: 20px;">
+                        <img role="social-icon" alt="Instagram" title="Instagram" border="0" height="20" width="20"
+                             style="height: 20px; width: 20px; border:none; font-family: Helvetica, arial, sans-serif;"
+                             src="https://marketing-image-production.s3.amazonaws.com/uploads/9a69bdbca1323621ed537e717a937702dadd5b0a8a1b220d7796e13c7d79ee97240c7c8698e9e0a239f863c1d8c4e5e9431427f115df2fafc895e53521f431a6.png"/></a>
+                    <a role="social-icon-link" href="http://www.github.com/hackcu" target="_blank" border="0"
+                       alt="GitHub" title="GitHub"
+                       style="border-radius: 5px; -webkit-border-radius:5px; -moz-border-radius:5px; -ms-border-radius:5px; -o-border-radius:5px; color: white; display: inline-block; outline: none; text-decoration:none; border: none; font-family: Helvetica, arial, sans-serif;  padding-left: 20px;">
+                        <img role="social-icon" alt="GitHub" title="GitHub" border="0" height="20" width="20"
+                             style="height: 20px; width: 20px; border:none; font-family: Helvetica, arial, sans-serif;"
+                             src="https://marketing-image-production.s3.amazonaws.com/uploads/1e2ecea719c97bc45cc2508dec5815060515968fc976c48dbc3b79ab019ce969cf060d82e2bc366f8cf9ca526e53dcec00dfef3b65ed1f0e099e85376e0d1a0a.png"/></a>
                 </td>
             </tr>
             <tr>
@@ -264,7 +277,6 @@
             </table>
             <![endif]-->
     </div>
-
 
 
 </center>
