--- a/app/templates/mails/include/email_button.html
+++ b/app/templates/mails/include/email_button.html
@@ -9,9 +9,9 @@
                    style="border-collapse:separate;mso-table-lspace:0pt;mso-table-rspace:0pt;width:100%;width:auto;">
                 <tbody>
                 <tr>
-                    <td style="font-family:sans-serif;font-size:14px;vertical-align:top;background-color:#ffffff;border-radius:0;text-align:center; margin: 0 auto;background-color:#1a8a58;" class="button-td">
+                    <td style="font-family:sans-serif;font-size:14px;vertical-align:top;border-radius:0;text-align:center; margin: 0 auto;background-color:#0F89ED;" class="button-td">
                         <a href="{{ url }}" target="_blank"
-                           style="text-decoration:underline;background-color:#ffffff;border:solid 1px #1a8a58;border-radius:0;box-sizing:border-box;cursor:pointer;display:inline-block;font-size:14px;font-weight:bold;margin:0;padding:12px 25px;text-decoration:none;text-transform:capitalize;background-color:#1a8a58;border-color:#1a8a58;color:#ffffff;" class="button-a">
+                           style="text-decoration:underline;background-color:#ffffff;border:solid 1px #0F89ED;border-radius:0;box-sizing:border-box;cursor:pointer;display:inline-block;font-size:14px;font-weight:bold;margin:0;padding:12px 25px;text-decoration:none;text-transform:capitalize;background-color:#0F89ED;border-color:#0F89ED;color:#ffffff;" class="button-a">
                             {{ text }}
                         </a>
                     </td>
