--- a/app/templates/base_email.html
+++ b/app/templates/base_email.html
@@ -258,14 +258,19 @@
                 </td>
             </tr>
             <tr>
-                <td style="padding: 40px 10px; width: 100%; font-family: sans-serif; font-size: 12px; line-height: 140%; text-align: center; color: white;"
+                <td style="padding: 30px 0 0 0px; width: 100%; font-family: sans-serif; font-size: 12px; line-height: 140%; text-align: center; color: white;"
                     class="x-gmail-data-detectors">
-                    You are receiving this email because you applied to {{ h_name }}
+                    You are receiving this email because you applied to {{ h_name }}.
                     <br><br>
                     If you think this is a mistake, please send us an email at {{ h_contact_email|urlize }}
-                    <br><br>
-
-
+                </td>
+            </tr>
+            <tr style="text-align:center; ">
+                <td style="padding-bottom: 30px; padding-top: 20px;">
+                    <a href="https://sendgrid.com/docs/for-developers/?utm_source=hackcu2018&utm_medium=email&utm_campaign=devrel&utm_content=link" target="_blank" style="border-radius: 5px; -webkit-border-radius:5px; -moz-border-radius:5px; -ms-border-radius:5px; -o-border-radius:5px; color: white; display: inline-block; outline: none; text-decoration:none; border: none; font-family: Helvetica, arial, sans-serif; ">
+                        Email powered by
+                        <img alt="SendGrid" title="SendGrid" border="0" height="20" width="20" style="vertical-align:middle; height: 20px; width: 20px; border:none; font-family: Helvetica, arial, sans-serif;" src="https://marketing-image-production.s3.amazonaws.com/uploads/0496f346b767e07944fcb6f75d011c2174cacf1bdbfd48579dbd7fb334379c2ffe306b6f2d452428f6a9428888f99fe9955a2b2414a65585a1e4e1253a60db92.png"/>
+                    </a>
                 </td>
             </tr>
         </table>
