2020 update coming souper soon

--- a/applications/templates/include/application_form.html
+++ b/applications/templates/include/application_form.html
@@ -14,6 +14,9 @@
     }
 
 </style>
+<div class="disclaimer">
+<b> Disclaimer:</b> Due to capacity limitations this year, we are only accepting up to 400 hackers this year, so please keep that in mind as you fill out this application.
+</div>
 <form class="signup " enctype="multipart/form-data" id="signup_form" method="post" action="">
     {% csrf_token %}
     {% bootstrap_form_errors form %}
