--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -27,17 +27,17 @@ h3,
 h4,
 h5,
 h6 {
-    color: #0F89ED;
+    color: #4285F4;
     font-family: 'Biko', sans-serif;
 }
 
 a {
-    color: #0F89ED;
+    color: #4285F4;
 }
 
 .btn-primary {
-    background-color: #0F89ED;
-    border-color: #0F89ED;
+    background-color: #4285F4;
+    border-color: #4285F4;
 }
 
 
@@ -58,7 +58,7 @@ a:hover, a:active, a:focus {
     width: 100%;
     /* Set the fixed height of the footer here */
     height: 105px;
-    background-color: #0F89ED;
+    background-color: #0F9D58;
     border-color: #e7e7e7;
 
     -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
@@ -100,6 +100,17 @@ a:hover, a:active, a:focus {
 
 /*}*/
 
+.btn-success {
+    background-color: #F4B400;
+    border-color: #F4B400;
+
+}
+
+.btn-success:hover {
+    background-color: rgb(168, 125, 5);
+    border-color: rgb(168, 125, 5);
+
+}
 footer p, footer small {
     color: #f9f9f9;
     opacity: 0.5;
@@ -139,7 +150,7 @@ footer a:hover, footer p > a:hover{
 }
 
 nav.navbar {
-    background-color: #0F89ED;
+    background-color: #4285F4;
     -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
     -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
@@ -147,7 +158,7 @@ nav.navbar {
 
 .navbar-nav > li > a, .navbar-nav > li > a:focus, .navbar-nav > li > a:active {
     color: #e5e5e5;
-    background-color: #0F89ED;
+    background-color: #4285F4;
     opacity: 1;
 }
 
@@ -179,6 +190,10 @@ div.panel {
 
 .confirm-content {
     margin-top: 70px
+}
+
+.disclaimer {
+    font-size: 20px;
 }
 
 .margin-top {
@@ -262,7 +277,7 @@ img.icon {
 }
 
 .alert-success {
-    background: #57AB5A;
+    background: black;
     color: #FBFBFB;
 }
 
