brief updates to deadline and acceptance email

--- a/applications/templates/mails/invitation_message.html
+++ b/applications/templates/mails/invitation_message.html
@@ -7,8 +7,8 @@
     </p>
     <p>
         Respond to this invitation by clicking on the "Confirm" link below.
-        <b>Please confirm your spot within 5 days of receiving this email. Otherwise we will give your spot to another
-            hacker on the waitlist.</b>
+        <b>If you do not confirm within 5 days of receiving this email, 
+            we cannot guarantee you a spot."</b>
     </p>
     {% include 'mails/include/email_button.html' with text='Confirm' url=confirm_url %}
     {% include 'mails/include/cancel.html' %}
