--- a/app/templates/403.html
+++ b/app/templates/403.html
@@ -14,6 +14,6 @@
     <div class="text-white">
         <h1 class="text-center margin-top">YOU SHALL NOT PASS!</h1>
         <h2 class="text-center">403 Access Forbidden</h2>
-        <p class="text-center">Please <a href="{% url 'account_login' %}">log in</a> with a more <b>powerful</b> account to access this page</p>
+        <p class="text-center">Are you not logged in? If so, please <a href="{% url 'account_login' %}">log in</a> with your account or a more <b>powerful</b> account to access this page</p>
     </div>
 {% endblock %}
